--- a/styles/main.css
+++ b/styles/main.css
@@ -422,6 +422,16 @@ body::-webkit-scrollbar-thumb {
     position: relative;
     top: 20px;
     cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+
+.content-btn:focus {
+    color: #8f9a98;
+}
+
+.content-btn:hover {
+    color: #ffffff !important;
+    background-color: #000000;
 }
 
 .desctiption .text {
