--- a/styles/main.css
+++ b/styles/main.css
@@ -172,9 +172,20 @@ body::-webkit-scrollbar-thumb {
 }
 
 .social-list li {
-    padding: 10px;
     display: inline;
     cursor: pointer;
+}
+
+.social-list li a {
+    padding: 10px;
+}
+
+.social-list li a img {
+    transition: transform 0.25s ease-out;
+}
+
+.social-list li a:hover img {
+    transform: scale(1.3);
 }
 
 .icons-fb {
@@ -575,6 +586,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width: 767px) {
+    .social-list li a:focus img {
+        transform: scale(1.3);
+    }
 
     .desctiption-block {
         text-align: center;
