--- a/styles/main.css
+++ b/styles/main.css
@@ -461,6 +461,78 @@ body::-webkit-scrollbar-thumb {
     display: none;
 }
 
+.desktop-menu {
+    width: 100%;
+    height: 69px;
+    -webkit-backdrop-filter: blur(7px);
+    background-color: rgba(255, 255, 255, 0.75);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.05);
+    margin-top: 15px;
+}
+
+.desktop-menu .menu-content > div {
+    position: relative;
+    top: 24px;
+}
+
+.menu-list {
+    list-style-type: none;
+}
+
+.menu-logo {
+    position: relative;
+    top: -6px;
+}
+
+.menu-list li {
+    display: inline;
+    padding: 18px;
+    font-family: "Montserrat-Regular";
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    line-height: normal;
+    text-align: left;
+    color: #161616;
+}
+
+.menu-list li a {
+    cursor: pointer;
+    transition: transform 0.25s ease-out;
+}
+
+.menu-list li a:hover,
+.menu-list li a:focus {
+    color: #161616;
+    transform: scale(1.3);
+}
+
+.menu-logo span {
+    font-family: "GothamProBlack";
+    font-size: 23px;
+    font-weight: 900;
+    font-style: normal;
+    font-stretch: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #161616;
+}
+
+.desktop-menu .menu-content {
+    background-image: linear-gradient(151deg, #f0f9f8, #f4fbfa);
+    height: 69px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.section-five {
+    margin-top: 0;
+}
+
 @media screen and (max-width: 1550px) {
     .section-one .desctiption {
         margin-left: 0;
@@ -520,6 +592,11 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media screen and (max-width: 1024px) {
+    .desktop-menu .menu-content {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
     .shortcute {
         height: 560px;
     }
@@ -578,6 +655,17 @@ body::-webkit-scrollbar-thumb {
         transform: scale(1.3);
     }
 }
+
+@media screen and (max-width: 991px) { 
+    .desktop-menu {
+        display: none;
+    }
+
+    .section-five {
+        margin-top: 24px;
+    }
+}
+
 
 @media screen and (max-width: 955px) {
     .desctiption .text {
