--- a/styles/main.css
+++ b/styles/main.css
@@ -503,12 +503,12 @@ body::-webkit-scrollbar-thumb {
 .menu-list li a {
     cursor: pointer;
     transition: transform 0.25s ease-out;
+    position: relative;
 }
 
 .menu-list li a:hover,
 .menu-list li a:focus {
     color: #161616;
-    transform: scale(1.3);
 }
 
 .menu-logo span {
@@ -527,6 +527,31 @@ body::-webkit-scrollbar-thumb {
     height: 69px;
     margin-left: 30px;
     margin-right: 30px;
+}
+
+.menu-link::after {
+	position: absolute;
+	top: 110%;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	background: rgba(22, 22, 22, 0.8);
+	content: '';
+	opacity: 0;
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+	-moz-transition: opacity 0.3s, -moz-transform 0.3s;
+	transition: opacity 0.3s, transform 0.3s;
+	-webkit-transform: translateY(10px);
+	-moz-transform: translateY(10px);
+	transform: translateY(10px);
+}
+
+.menu-link:hover::after,
+.menu-link a:focus::after {
+	opacity: 1;
+	-webkit-transform: translateY(0px);
+	-moz-transform: translateY(0px);
+	transform: translateY(0px);
 }
 
 .section-five {
